tests/invalid/dict_clear_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 2}
    d.clear(1)


if __name__ == "__main__":
    run_case()
